Fixed overflow on title in post

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -22,3 +22,7 @@
 .profile__bio {
     border-radius: $card-border-radius;
 }
+
+.nameAndTitleDiv {
+    overflow: hidden;
+}
